<resources>
    <string name="app_name">News</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_password">Password</string>
    <string name="enter_email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="news_aggregator">News Aggregator</string>
    <string name="register_while_logged_in">Please logout before trying to register</string>
    <string name="register_failure">Registration failed</string>
    <string name="login_failure">Login failed</string>
    <string name="title_activity_article_view">ArticleView</string>

</resources>